sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:3: error: ';' expected but ',' found.
	si c'est pas trié, tu trie ma gueule
                         ^